--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path
+ <!--   <external-path
         name="external_files"
         path="." />
     <external-cache-path
         name="cache"
-        path="camera" />
+        path="camera" />-->
+    <external-path name="Pictures" path="."/>
+
 </paths>
